bad/assign_new_array_class_int.example_compiler_output
ERROR
[1mbad/assign_new_array_class_int.lat:6:11: [1;31merror: [0;1mleft side is not assignable[m
	new Y[3] = 42;
	         [1;32m^[m
[1mbad/assign_new_array_class_int.lat:6:2: [1;34mnote: [0;1mleft side starts here[m
	new Y[3] = 42;
	[1;32m^[m
